# MinesweeperC

./: CMakeLists.txt  README.md  makefile
include/: Cell.h  Constants.h  Game_Logic.h  Game_State.h  Input_Processing.h  Run_Game.h  Utilities.h
src/: Game_Logic.c  Input_Processing.c  Run_Game.c  Utilities.c  main.c
